<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="analytics_traker_id">UA-110081081-1</string>
    <string name="drawer_themes">Themes</string>
    <string name="drawer_favorites">Favorites</string>
    <string name="drawer_personalize">Personalize</string>
    <string name="drawer_languages">Languages</string>
    <string name="drawer_fonts">Fonts</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_rate">Rate Us</string>
    <string name="drawer_share">Share</string>
    <string name="tab_themes_premium">Premium</string>
    <string name="tab_themes_new">New</string>
    <string name="tab_themes_your">Your Themes</string>
    <string name="tab_personalize_background">Background</string>
    <string name="tab_personalize_keys">Keys</string>
    <string name="tab_settings_visual">Visual</string>
    <string name="tab_settings_typing">Typing</string>
    <string name="tab_settings_gestures">Gestures</string>
    <string name="setup_enable_keyboard">Enable keyboard</string>
    <string name="setup_activate_keyboard">Activate keyboard</string>
    <string name="setup_choose_languages">Choose languages</string>
    <string name="setup_try_button">Try it out now</string>
    <string name="setup_finish_text">You\'re done!</string>
    <string name="language_available">Available</string>
    <string name="language_installed">Installed</string>
    <string name="dummy">I is dum</string>
    <string-array name="background_colors">

        <item>#607D8B</item>
        <item>#3F51B5</item>
        <item>#2196F3</item>
        <item>#03A9F4</item>
        <item>#00BCD4</item>
        <item>#009688</item>

        <item>#4CAF50</item>
        <item>#8BC34A</item>
        <item>#CDDC39</item>
        <item>#FFEB3B</item>
        <item>#FFC107</item>
        <item>#FF9800</item>

        <item>#FF5722</item>
        <item>#F44336</item>
        <item>#E91E63</item>
        <item>#9C27B0</item>
        <item>#673AB7</item>
        <item>#795548</item>

    </string-array>
    <string name="english_ime_input_options">Input options</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_accounts">Accounts &amp; Privacy</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="cloud_sync_title">Google Keyboard Sync</string>
    <string name="cloud_sync_summary">Sync is turned on</string>
    <string name="cloud_sync_summary_disabled">Sync your personal dictionary across devices</string>
    <string name="sync_now_title">Sync now</string>
    <string name="clear_sync_data_title">Delete cloud data</string>
    <string name="clear_sync_data_summary">Deletes your synced data from Google</string>
    <string name="clear_sync_data_confirmation">Your synced data will be deleted from the cloud. Are you sure?</string>
    <string name="clear_sync_data_ok">Delete</string>
    <string name="cloud_sync_cancel">Cancel</string>
    <string name="cloud_sync_opt_in_text">Your personal dictionary will be synced and backed up to
        Google servers. The statistical information of word frequency may be collected to help
        improve our products. The collection and usage of all the information will be compliant with
        <a href="https://www.google.com/policies/privacy">Google\'s Privacy Policy</a>.
    </string>
    <string name="add_account_to_enable_sync">
        Please add a Google account to this device to enable this feature
    </string>
    <string name="cloud_sync_summary_disabled_work_profile">
        Sync is not available for devices with Google Apps for Business accounts
    </string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="enable_metrics_logging">"Improve <xliff:g example="Android Keyboard" id="APPLICATION_NAME">%s</xliff:g>"</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_disabled_summary">No voice input methods enabled. Check Language &amp; input settings.</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Languages</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="select_language">Languages</string>
    <string name="hint_add_to_dictionary">Touch again to save</string>
    <string name="hint_add_to_dictionary_without_word">Touch here to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="no_accounts_selected">No accounts selected</string>
    <string name="account_selected">Currently using <xliff:g example="someone@example.com" id="EMAIL_ADDRESS">%1$s</xliff:g></string>
    <string name="account_select_ok">OK</string>
    <string name="account_select_cancel">Cancel</string>
    <string name="account_select_sign_out">Sign out</string>
    <string name="account_select_title">Select an account to use</string>
    <string name="subtype_en_GB">English</string>
    <string name="subtype_en_US">English</string>
    <string name="subtype_es_US">Spanish (US)</string>
    <string name="subtype_hi_ZZ">Hinglish</string>
    <string name="subtype_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_with_layout_en_GB">English (UK) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_en_US">English (US) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_es_US">Spanish (US) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_hi_ZZ">Hinglish (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_sr_ZZ">Serbian (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_generic_traditional"><xliff:g example="Nepali" id="LANGUAGE_NAME">%s</xliff:g> (Traditional)</string>
    <string name="subtype_generic_compact"><xliff:g example="Hindi" id="LANGUAGE_NAME">%s</xliff:g> (Compact)</string>
    <string name="subtype_no_language">No language (Alphabet)</string>
    <string name="subtype_no_language_qwerty">Alphabet (QWERTY)</string>
    <string name="subtype_no_language_qwertz">Alphabet (QWERTZ)</string>
    <string name="subtype_no_language_azerty">Alphabet (AZERTY)</string>
    <string name="subtype_no_language_dvorak">Alphabet (Dvorak)</string>
    <string name="subtype_no_language_colemak">Alphabet (Colemak)</string>
    <string name="subtype_no_language_pcqwerty">Alphabet (PC)</string>
    <string name="subtype_emoji">Emoji</string>
    <string name="keyboard_theme">Keyboard theme</string>
    <string name="keyboard_theme_holo_white" translatable="false">Holo White</string>
    <string name="keyboard_theme_holo_blue" translatable="false">Holo Blue</string>
    <string name="keyboard_theme_material_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_material_light" translatable="false">Material Light</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="add_style">Add style</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="subtype_locale">Language</string>
    <string name="keyboard_layout_set">Layout</string>
    <string name="activate_keyboard" translatable="false">Activate Standard Keyboard</string>
    <string name="switch_keyboard" translatable="false">Switch to Standard Keyboard</string>
    <string name="boost_keyboard">Boost Performance</string>
    <string name="app_name">ThemesKotlin</string>
</resources>