<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_tutorial"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/Home_carousel" >
        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/intro_image"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/btnActivate"
            style="@style/tutorial_button">

            <RelativeLayout style="@style/tutorial_nr_button">

                <TextView
                    style="@style/tutorial_text_nr_button"
                    android:text="1" />

            </RelativeLayout>

            <TextView
                style="@style/tutorial_text_button"
                android:text="@string/activate_keyboard" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnSwitch"
            style="@style/tutorial_button"
            android:background="@drawable/button_unselected"
            android:layout_marginTop="20dp">

            <RelativeLayout style="@style/tutorial_nr_button">

                <TextView
                    style="@style/tutorial_text_nr_button"
                    android:text="2" />

            </RelativeLayout>

            <TextView
                style="@style/tutorial_text_button"
                android:text="@string/switch_keyboard" />

        </RelativeLayout>

        <RelativeLayout
                android:visibility="gone"
            android:id="@+id/btnBoost"
            style="@style/tutorial_button"
            android:background="@drawable/button_unselected"
            android:layout_marginTop="20dp">

            <RelativeLayout style="@style/tutorial_nr_button">

                <TextView
                    style="@style/tutorial_text_nr_button"
                    android:text="3" />

            </RelativeLayout>

            <TextView
                style="@style/tutorial_text_button"
                android:text="@string/boost_keyboard"/>

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
